Fix Release Workflow
Signed-off-by: Julio Jimenez <julio@julioj.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,4 +34,4 @@ jobs:
         with:
           artifacts: "bogu-*-linux-x64"
           generateReleaseNotes: true
-          tag: ${{ inputs.release_version }
+          tag: ${{ inputs.release_version }}
