--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
           architecture: x64
           distribution: full
           variant: CS
-          version: current
+          version: stable
 
       - name: Build Executable
         run: raco exe -o bogu-${{ inputs.release_version }}-linux-x64 bogu.rkt
