--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,9 @@ jobs:
           variant: CS
           version: stable
 
+      - name: Setup Raco
+        run: raco setup
+      
       - name: Build Executable
         run: raco exe -o bogu-${{ inputs.release_version }}-linux-x64 bogu.rkt
 
