--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,7 +37,9 @@ jobs:
         run: raco exe -o bogu-${{ inputs.release_version }}-linux-x64 bogu.rkt
 
       - name: Make bogu
-        run: make bogu
+        run: |
+          make bogu
+          ls build/lib
 
       - name: Create Release
         uses: ncipollo/release-action@v1
