--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,12 +46,6 @@ jobs:
           generateReleaseNotes: true
           tag: ${{ inputs.release_version }}
 
-      # Set up BuildKit Docker container builder to be able to build
-      # multi-platform images and export cache
-      # https://github.com/docker/setup-buildx-action
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@f95db51fddba0c2d1ec667646a06c2ce06100226 # v3.0.0
-
       # Login against a Docker registry except on PR
       # https://github.com/docker/login-action
       - name: Log into registry ${{ env.REGISTRY }}
@@ -76,5 +70,6 @@ jobs:
         uses: docker/build-push-action@0565240e2d4ab88bba5387d719585280857ece09 # v5.0.0
         with:
           context: .
+          push: true
           tags: ${{ inputs.release_version }}
           labels: ${{ steps.meta.outputs.labels }}
