--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,9 @@ jobs:
     name: Build and Release
     runs-on: ubuntu-latest
 
-    permissions: write-all
+    permissions:
+      contents: write
+      packages: write
 
     steps:
       - name: Checkout code
