--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,10 +2,10 @@ on:
   push:
   workflow_dispatch:
 
-name: E2E Tests
+name: Tests
 jobs:
-  e2e:
-    name: "E2E Tests on Racket '${{ matrix.racket-version }}' (${{ matrix.racket-variant }})"
+  tests:
+    name: "Unit Tests on Racket '${{ matrix.racket-version }}' (${{ matrix.racket-variant }})"
     runs-on: ubuntu-latest
     continue-on-error: ${{ matrix.experimental || false }}
     strategy:
@@ -34,8 +34,6 @@ jobs:
       - name: raco pkg install
         run: raco pkg install uuid
 
-      - name: Build bogu
-        run: make bogu
-
-      - name: Run
-        run: ./bogu -vp mock
+      - name: Unit Tests
+        run: |
+          raco test strings-test.rkt
